[gd_scene load_steps=5 format=3 uid="uid://b5tre1l3fvutc"]

[ext_resource type="Script" uid="uid://bgwidh0e7wbf5" path="res://scenes/ui/scene_manager.gd" id="1_o6d0x"]
[ext_resource type="PackedScene" uid="uid://rw2udorc0ue" path="res://scenes/ui/splash_screen_manager.tscn" id="2_03psc"]
[ext_resource type="PackedScene" uid="uid://351sqt5uyhue" path="res://scenes/ui/transition_manager.tscn" id="2_ik8mu"]
[ext_resource type="PackedScene" uid="uid://b2bx2gdyg5o7c" path="res://scenes/audio/AudioManager.tscn" id="4_hu4x8"]

[node name="SceneManager" type="Node" node_paths=PackedStringArray("world3d", "gui", "transition_manager")]
process_mode = 3
script = ExtResource("1_o6d0x")
world3d = NodePath("World3D")
gui = NodePath("GUI")
transition_manager = NodePath("TransitionManager")

[node name="AudioManager" parent="." instance=ExtResource("4_hu4x8")]

[node name="World3D" type="Node3D" parent="."]
process_mode = 1

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SplashScreenManager" parent="GUI" instance=ExtResource("2_03psc")]
layout_mode = 1

[node name="TransitionManager" parent="." instance=ExtResource("2_ik8mu")]
mouse_filter = 2
